--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,17 @@
         color: white;
     }
 }
-@media screen and (min-width: 768px) {body {background-color: yellow;align-content: center;}
-  .heading {color: green;font-style: oblique;}.name {color: red}.header {color: purple}.impo {color: grey}.exa {color: blue}}
+@media screen and (min-width: 768px)
+{body {background-color: yellow;align-content: center;}
+  .heading {color: green;
+    font-style: oblique;
+    font-size: 50px;
+  }
+    .name {color: red}.header {color: purple}.impo {color: grey}.exa {color: blue}
+    .intro{
+      color: #007575;
+      font-size: 30px;
+    }
+
+
+    }
